Created Footer with JS for date and fallback no script
Created Footer with JS for date and fallback no script
Also created first single page on hugo

--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,9 @@ defaultContentLanguage: en
 languageCode: en-us
 title: Six Sided Heroes
 
+# Alternate Copyright company text
+copyright: Digital Hammock Web Development 
+
 # this is so Hugo Will Render md To HTML
 markup:
   goldmark:
