--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,9 @@ jobs:
           extended: true
 
       - name: Build the site
-        run: hugo --minify
+        # Ensure assets link correctly when deployed to GitHub Pages for this repo.
+        # Replace the baseURL below if you change the repository name or want a custom domain.
+        run: hugo --minify --baseURL "https://adam-omah.github.io/SixSidedHeroesWebsite/"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
